tests/slp17_platform_target_field_requires_import_bad.sl
// Verifies SLP 17 platform target field requires import is rejected.
import "platform"

fn write_err() context Context {
	var e i32 = context.stdin
}
